--- a/code/complete-code.Rmd
+++ b/code/complete-code.Rmd
@@ -19,7 +19,7 @@ This document compiles and cleans several datasets related to RB5 monitoring, bi
 ### 1. Monitoring Data
 Loads RB5 monitoring data, filters for the target period, and drops unused variables.
 ```{r}
-RB5_monitoring_data <- read.csv("data/csv/RB5_monitoring_data_monthly_average_1980-2023.csv")
+RB5_monitoring_data <- read.csv("../data/csv/RB5_monitoring_data_monthly_average_1980-2023.csv")
 RB5_monitoring_data <- RB5_monitoring_data %>%
   filter(between(year, 2004, 2016)) %>%
   select(-RB5.Cond, -RB5.NO2, -RB5.NH4, -RB5.PP, -RB5.PSiO2, -RB5.SURP, -RB5.TSi, -RB5.TSP, -RB5.TON) %>%
@@ -29,14 +29,14 @@ RB5_monitoring_data <- RB5_monitoring_data %>%
 ### 2. Biovolume Data
 Processes monthly biovolume values and standardizes date format.
 ```{r}
-biovol_fulldata <- read.csv("data/csv/biovolfulldata_2004-2016.csv") %>%
+biovol_fulldata <- read.csv("../data/csv/biovolfulldata_2004-2016.csv") %>%
   mutate(YearMonth = as.Date(YearMonth))
 ```
 
 ### 3. Predator (Daphnia) Data
 Selects and processes zooplankton data, aggregates monthly means, and filters for the target timeframe.
 ```{r}
-predator_data <- read.csv("data/csv/crustaceanzooplankton_1980-2023.csv") %>%
+predator_data <- read.csv("../data/csv/crustaceanzooplankton_1980-2023.csv") %>%
   select(Date, Daphnia.hyalina.ind.L) %>%
   mutate(Date = dmy(Date), year = year(Date), month = month(Date)) %>%
   filter(!is.na(Date)) %>%
@@ -51,12 +51,12 @@ predator_data <- read.csv("data/csv/crustaceanzooplankton_1980-2023.csv") %>%
 ### 4. Water Level Data
 Combines two water level datasets and computes monthly means.
 ```{r}
-waterlevelp2 <- read.csv("data/csv/waterlevels_1993-2007.csv") %>%
+waterlevelp2 <- read.csv("../data/csv/waterlevels_1993-2007.csv") %>%
   rename(waterlevel.masl = Harbour.masl) %>%
   mutate(Date = dmy(Date)) %>%
   select(Date, waterlevel.masl)
 
-waterlevelp3 <- read.csv("data/csv/waterlevels_2008-2013.csv") %>%
+waterlevelp3 <- read.csv("../data/csv/waterlevels_2008-2013.csv") %>%
   rename(Date = SAMPLE_DATE, waterlevel.masl = Level.maod) %>%
   mutate(Date = dmy(Date)) %>%
   select(Date, waterlevel.masl)
@@ -72,7 +72,7 @@ fullwaterlevel <- bind_rows(waterlevelp2, waterlevelp3) %>%
 ### 5. Temperature and SD Data
 Processes temperature and standard deviation data, summarising to monthly means.
 ```{r}
-tempsddata <- read.csv("data/csv/Temp_SD_2004-2016.csv") %>%
+tempsddata <- read.csv("../data/csv/Temp_SD_2004-2016.csv") %>%
   mutate(Date = dmy(Date), RB5.SD = as.numeric(RB5.SD), RB5.Temp = as.numeric(RB5.Temp),
          year = year(Date), month = month(Date)) %>%
   group_by(year, month) %>%
@@ -83,7 +83,7 @@ tempsddata <- read.csv("data/csv/Temp_SD_2004-2016.csv") %>%
 ### 6. pH Data (2010–2016)
 Processes pH values, available only for 2010–2016, into monthly means.
 ```{r}
-pHdata <- read.csv("data/csv/pH_2010-2016.csv") %>%
+pHdata <- read.csv("../data/csv/pH_2010-2016.csv") %>%
   select(Date, Value) %>%
   mutate(Date = dmy(Date), RB5.pH = Value,
          year = year(Date), month = month(Date)) %>%
@@ -95,7 +95,7 @@ pHdata <- read.csv("data/csv/pH_2010-2016.csv") %>%
 ### 7. DO Data (2010–2016)
 Filters and processes dissolved oxygen (% saturation) into monthly averages.
 ```{r}
-DOdata <- read.csv("data/csv/DO_2010-2016.csv") %>%
+DOdata <- read.csv("../data/csv/DO_2010-2016.csv") %>%
   filter(Units == "%") %>%
   select(Date, Value) %>%
   mutate(Date = dmy(Date), RB5.DO = Value,
@@ -149,8 +149,8 @@ all_data <- all_data %>%
 ## Save Final Dataset
 Exports the cleaned and merged dataset as CSV files for further analysis.
 ```{r}
-write.csv(all_data, "data/csv/alldata-2004-2016.csv", row.names = FALSE)
-write.csv(all_data, "data/csv/alldata-2004-2016v2.csv", row.names = FALSE)
+write.csv(all_data, "../data/csv/alldata-2004-2016.csv", row.names = FALSE)
+write.csv(all_data, "../data/csv/alldata-2004-2016v2.csv", row.names = FALSE)
 ```
 
 ## Conclusion
